--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="tab_tv_normal">#999999</color>
+    <color name="tab_tv_selected">#3F51B5</color>
+    <color name="bg_color">#F2F2F2</color>
 </resources>
